# twooter

./: .env  .gitignore  README.md  chatgpt-twoots.csv  pyproject.toml
scripts/: add_test_data.py
twooter/: app.py  config.py  db.py  message_stats.py
